0.1-alpha2/_sources/gene/AGAP003649.rst.txt
:orphan:



AGAP003649
==========

Location: **2R:40,972,686-40,994,900**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP003649>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:40972686-40994900#genomebrowser>`_

Overlapping signals
-------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/BFM/2/4/index`, "2R:40,880,001-40,980,000", 400 (185 | 214)
    :doc:`../signal/H12/BFS/2/6/index`, "2R:40,820,001-41,000,000", 359 (249 | 109)
    :doc:`../signal/H12/CMS/2/3/index`, "2R:40,600,001-40,980,000", 269 (195 | 74)
    





Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP003649';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


