0.1-alpha3/_sources/gene/AGAP003649.rst.txt
:orphan:



AGAP003649
==========

Location: **2R:40,972,686-40,994,900**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP003649>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:40972686-40994900#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/BFS/2/4/index`
      - H12
      - Burkina Faso *An. gambiae*
      - 2R:40,640,000-41,060,000
      - 384
      - 95.9%
      - nan
    * - :doc:`../signal/IHS/BFM/2/2/index`
      - IHS
      - Burkina Faso *An. coluzzii*
      - 2R:40,880,000-41,160,000
      - 312
      - 99.7%
      - nan
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/BFS.UGS/2/2/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2R:40,880,000-40,940,000
      - 1,181
      - 99.6%
      - nan
    * - :doc:`../signal/XPEHH/CMS.UGS/2/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:41,020,000-41,400,000
      - 943
      - 99.7%
      - nan
    * - :doc:`../signal/H12/BFM/2/3/index`
      - H12
      - Burkina Faso *An. coluzzii*
      - 2R:40,920,000-40,960,000
      - 512
      - 97.6%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP003649';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


